--- a/make-up-task.html
+++ b/make-up-task.html
@@ -1,39 +1,35 @@
-<!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width" initial-scale=1.0>
-        <style>
+<style>
     
-          body{
-        background-color: rgba(240, 255, 240, 0.25);
+    body{
+        background-color: rgba(240, 255, 240, 0.493);
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
+    }
     
-        h3{
+    h3{
         text-align: center;
         margin: 80px 0;
-        }
-        .who{
+    }
+    .who{
         margin-top: 1px;
-        text-align: center;
-        margin-right: -220px;
         margin-bottom: 1px;
         font-weight: 450;
-        }
-        hr{
+    }
+    hr{
         margin-top: 1px;
-        margin-right: 65px;
-        }
-        div.container::after{
-        margin:10px 150px;
+    }
+    div.container::after{
+        margin:10px 100px;
         box-sizing: border-box;
         content: "";
         clear: both;
         display: table;
 
-        }
-        div.contact{
+    }
+    div.contact{
         border-top: 1px solid white;
         border-bottom: 3px solid rgba(128, 128, 128, 0.4);
         border-left: 1px solid rgba(128, 128, 128, 0.3);
@@ -42,33 +38,17 @@
         border-bottom-left-radius: 8px;
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
-        margin: 0px 150px;
+        margin: 3px 150px;
         margin-bottom: 30px;
-        margin-top: 60px;
         padding: 3px 50px;
         background-color: white;
-         }
-            input.box{
-                width: 870px;
-                border: 1px solid rgba(128, 128, 128, 0.3);
-                border-radius: 4px;
-            }
-            input.msg {
-                height: 100px;
-                width: 870px;
-                border-radius: 4px;
-                border: 1px solid rgba(128, 128, 128, 0.3);
-
-            }
-            img.camp{
-                margin-right: 30px;
-            }
-        .column{
+    }
+    .column{
         float: left;
         width: 33.33%;
         padding: 5px;
-        }
-        .submit{
+    }
+    .submit{
         background-color: rgba(0, 0, 255, 0.856);
         color: white;
         border:none;
@@ -77,48 +57,48 @@
         height: 2em;
         margin-left: 80%;
         margin-bottom: 40px;
-            }
-        </style>
+    }
+</style>
     </head>
     <body>
-        <div style="margin: 10px 100px;" class="container">
+        <div style="margin: 0 100px;" class="container">
         <h3>Welcome</h3>
-            <div class="column">
-               <img class="camp" src="media/Kodecamp.png" alt="Developer"
-                 style="width: 100%;">
-            </div>
-            <div class="column">
+        <div class="column">
+            <img src="https://db5pap001files.storage.live.com/y4m2sOWT-gvYIuNMDPCQuwybOGMo9SkhSuVWLbuh5Lh0P5K-sYiEROZKu_iFKbok0b_cjfF_DKvp25xOHR33e603d8wYHiJ68C31xv75O2GFvGfK2mKQfeMziHNvgcapR521paU7c4LQa_92MRO-j198u5gBYYUgJYbgfUuZ3P2pHPDGwg0L6Le3wEgWRnPiBQc?width=282&height=331&cropmode=none" alt="Developer"
+             style="width: 100%;">
+        </div>
+        <div class="column">
             <h3 class ="who">Who We Are?</h3>
-            <hr style="border: 1px solid gold;" width="40px"> 
-            <p style="width: 160%; margin: 30px 30px;"> Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> 
-                Corrupti repelledus quo tempore laborum mollitia ex <br> praesentium official
-                 vel excepturi dolorum voluptates, officilis <br>dolores alias! Cum, debitis unde 
-                 ipsa eum necessitatibus itaque<br>temporibus voluptatum sit libero accusantium nihil. 
-                 Quaerat<br>maxime repellat mollitia, libero solute reprehenderit 
-                officia<br>Veritatis voluptatum nesciunt porro culpa doloribus ullam et <br>error?</p>
-            </div>
-            <div class="column">
-            <p style="width: 160%; margin: 0 30px; margin-top: -25px;">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> 
-                Corrupti repelledus quo tempore laborum mollitia ex <br> praesentium official
-                 vel excepturi dolorum voluptates, officilis <br>dolores alias! Cum, debitis unde 
-                 ipsa eum necessitatibus itaque<br>temporibus voluptatum sit libero accusantium nihil. 
-                 Quaerat<br>maxime repellat mollitia, libero solute reprehenderit 
-                officia<br>Veritatis voluptatum nesciunt porro culpa doloribus ullam et <br>error?
+            <hr size="3px" style="color:rgb(255, 217, 0); width: 40px;">
+            <p style="width: 160%;"> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Corrupti repelledus quo tempore laborum mollitia ex praesentium official
+                 vel excepturi dolorum voluptates, officilis dolores alias! Cum, debitis unde 
+                 ipsa eum necessitatibus itaque temporibus voluptatum sit libero accusantium nihil. 
+                 Quaerat maxime repellat mollitia, libero solute reprehenderit 
+                officia Veritatis voluptatum nesciunt porro culpa doloribus ullam et error?</p>
+        </div>
+        <div class="column">
+            <p style="width: 160%;">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Corrupti repelledus quo tempore laborum mollitia ex praesentium official
+                 vel excepturi dolorum voluptates, officilis dolores alias! Cum, debitis unde 
+                 ipsa eum necessitatibus itaque temporibus voluptatum sit libero accusantium nihil. 
+                 Quaerat maxime repellat mollitia, libero solute reprehenderit 
+                officia Veritatis voluptatum nesciunt porro culpa doloribus ullam et error?
             </p>
-            </div>
+        </div>
         </div>
         <div class="contact">
             <h2>Contact Us</h2>
             <form action="">
                 <label for="fname">First Name</label><br>
-                <input type="text" id="fname" name="fname" class="box"><br>
+                <input type="text" id="fname" name="fname" style="width: 870px; border-radius: 2.5px;"><br>
                 <br>
                 <label for="lname">Last name</label><br>
-                <input type="text" id="lname" name="lname" class="box"><br>
+                <input type="text" id="lname" name="lname" style="width: 870px; border-radius: 2.5px;"><br>
                 <br>
                 <label for="message">Your message</label><br>
-                <input type="message" id="message" name="message" class="box, msg"><br><br>
+                <input type="message" id="message" name="message" style="width: 870px; height: 150px; border-radius: 2.5px;"><br><br>
                 <input type="submit" class = "submit" value="Submit" >
             </form>
         </div>
