--- a/make-up-task.html
+++ b/make-up-task.html
@@ -84,10 +84,7 @@
         <div style="margin: 10px 100px;" class="container">
         <h3>Welcome</h3>
             <div class="column">
-               <img class="camp" src="//db5pap001files.storage.live.com/y4m2sOWT-
-               gvYIuNMDPCQuwybOGMo9SkhSuVWLbuh5Lh0P5K-sYiEROZKu_iFKbok0b_cjfF_
-               DKvp25xOHR33e603d8wYHiJ68C31xv75O2GFvGfK2mKQfeMziHNvgcapR521paU7c4LQa
-               _92MRO-j198u5gBYYUgJYbgfUuZ3P2pHPDGwg0L6Le3wEgWRnPiBQc?width=282&height=331&cropmode=none" alt="Developer"
+               <img class="camp" src="https://afolhabeeb.github.io/Bonus-Task/Kodecamp.png" alt="Developer"
                  style="width: 100%;">
             </div>
             <div class="column">
