--- a/make-up-task.html
+++ b/make-up-task.html
@@ -84,7 +84,7 @@
         <div style="margin: 10px 100px;" class="container">
         <h3>Welcome</h3>
             <div class="column">
-               <img class="camp" src="https://afolhabeeb.github.io/Bonus-Task/Kodecamp.png" alt="Developer"
+               <img class="camp" src="//afolhabeeb.github.io/Bonus-Task/Kodecamp.png" alt="Developer"
                  style="width: 100%;">
             </div>
             <div class="column">
